[tool.poetry]
name = "NX-Jikkyo"
version = "1.8.1"
description = "NX-Jikkyo: Nico Nico Jikkyo Alternative"
package-mode = false

[tool.taskipy.tasks]
serve  = "cd ../ && docker compose build && docker compose run --rm --service-ports nx-jikkyo"
dev    = "cd ../ && docker compose build && docker compose run --rm --service-ports --volume=./server/app/:/code/server/app/ nx-jikkyo --reload"
aerich = "cd ../ && docker compose build && docker compose run --rm --service-ports --volume=./server/app/:/code/server/app/ --entrypoint=/code/server/.venv/bin/aerich nx-jikkyo"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aerich = "^0.7.2"
aiomysql = "^0.2.0"
async-lru = "^2.0.4"
cryptography = "^42.0.5"
fastapi = "^0.109.1"
fastapi-restful = "^0.5.0"
httpx = {version = "^0.27.0", extras = ["http2"]}
ndgr-client = { git = "https://github.com/tsukumijima/NDGRClient", rev = "966fe05f4a8cb507f9a40369ee6a248c1fc0e8aa" }
pydantic = "^2.5.2"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
redis = "==4.6.0"
rich = "^13.7.0"
taskipy = "^1.12.2"
tortoise-orm = "^0.20.0"
typer = "^0.12.3"
types-redis = "^4.6.0.20240425"
typing-inspect = "^0.9.0"
uvicorn = {version = "^0.24.0.post1", extras = ["standard"]}
uvloop = {version = "^0.19.0", platform = "linux"}
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "app.constants.DATABASE_CONFIG"
location = "./app/migrations/"
src_folder = "./"
