[tool.poetry]
name = "NX-Jikkyo"
version = "1.11.3"
description = "NX-Jikkyo: Nico Nico Jikkyo Alternative"
package-mode = false

[tool.taskipy.tasks]
serve  = "cd ../ && docker compose build && docker compose run --rm --service-ports nx-jikkyo"
dev    = "cd ../ && PWD=$(pwd) docker compose build && PWD=$(pwd) docker compose run --rm --service-ports --volume=${PWD}/server/app/:/code/server/app/ nx-jikkyo --reload"
aerich = "cd ../ && PWD=$(pwd) docker compose build && PWD=$(pwd) docker compose run --rm --service-ports --volume=${PWD}/server/app/:/code/server/app/ --entrypoint=/code/server/.venv/bin/aerich nx-jikkyo"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
aerich = "^0.7.2"
aiomysql = "^0.2.0"
apscheduler = "^3.11.0"
async-lru = "^2.0.4"
cryptography = "^43.0.3"
fastapi = "^0.115.3"
fastapi-utils = "^0.7.0"
httpx = {version = "^0.27.2", extras = ["http2"]}
ndgr-client = { git = "https://github.com/tsukumijima/NDGRClient", rev = "880520f2c98da03450418eeb80d0710b6cf22f94" }
pydantic = "^2.9.2"
pydantic-settings = "~2.5.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.12"
redis = "==4.6.0"
rich = "^13.9.3"
taskipy = "^1.14.0"
tortoise-orm = "^0.21.7"
typer = "^0.12.3"
types-redis = "^4.6.0.20241004"
typing-inspect = "^0.9.0"
uvicorn = {version = "^0.32.0", extras = ["standard"]}
uvloop = {version = "^0.21.0", platform = "linux"}
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "app.constants.DATABASE_CONFIG"
location = "./app/migrations/"
src_folder = "./"
