[tool.poetry]
name = "NX-Jikkyo"
version = "1.13.3"
description = "NX-Jikkyo: Nico Nico Jikkyo Alternative"
package-mode = false

[tool.taskipy.tasks]
serve  = "cd ../ && docker compose build && docker compose run --rm --service-ports nx-jikkyo"
dev    = "cd ../ && PWD=$(pwd) docker compose build && PWD=$(pwd) docker compose run --rm --service-ports --volume=${PWD}/server/app/:/code/server/app/ nx-jikkyo --reload"
aerich = "cd ../ && PWD=$(pwd) docker compose build && PWD=$(pwd) docker compose run --rm --service-ports --volume=${PWD}/server/app/:/code/server/app/ --entrypoint=/code/server/.venv/bin/aerich nx-jikkyo"
lint = "ruff check --fix . ; pyright"
typecheck = "pyright"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
aerich = "==0.9.1"
aiomysql = ">=0.2.0,<1.0.0"
apscheduler = "^3.11.0"
async-lru = "^2.0.4"
cryptography = "^43.0.3"
fastapi = "~0.115.3"
httpx = {version = ">=0.27.2,<1.0.0", extras = ["http2"]}
ndgr-client = { git = "https://github.com/tsukumijima/NDGRClient", rev = "92c34cdddf5663a9fdf645ecb1e40b2dd0d6ea65" }
pydantic = "^2.9.2"
pydantic-settings = "~2.5.2"
python-jose = "^3.3.0"
python-multipart = ">=0.0.12,<1.0.0"
redis = "==4.6.0"
rich = "^13.9.3"
taskipy = "^1.14.0"
tortoise-orm = ">=0.21.7,<1.0.0"
typer = ">=0.21.0,<1.0.0"
types-redis = "^4.6.0.20241004"
typing-inspect = ">=0.9.0,<1.0.0"
uvicorn = {version = ">=0.32.0,<1.0.0", extras = ["standard"]}
uvloop = {version = ">=0.21.0,<1.0.0", platform = "linux"}
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.403"
ruff = ">=0.9.1,<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "app.constants.DATABASE_CONFIG"
location = "./app/migrations/"
src_folder = "./"

[tool.ruff]
# インデントの幅を4スペースに設定
indent-width = 4
# Python 3.13 を利用する
target-version = "py313"
# data/ ディレクトリは対象から除外する
extend-exclude = ["data/"]

[tool.ruff.lint]
# flake8, pycodestyle, pyupgrade, isort, Ruff 固有のルールを使う
select = ["F", "E", "W", "UP", "I", "RUF", "TID251"]
ignore = [
    "E501",    # 1行の長さを超えている場合の警告を抑制
    "E731",    # Do not assign a `lambda` expression, use a `def` を抑制
    "RUF001",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF002",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF003",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF012",
]

[tool.ruff.lint.isort]
# インポートブロックの後に2行空ける
lines-after-imports = 2

[tool.pyright]
# Python バージョンを指定
pythonVersion = "3.13"
# TypeCheckingMode を strict に設定（VSCode の設定と同等）
typeCheckingMode = "strict"
# プロジェクトルートを指定
pythonPlatform = "All"
# インクルードするパッケージパス
include = ["app/"]
# 除外するパス
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "data/",
    "logs/",
]
# VSCode の settings.json の diagnosticSeverityOverrides に対応する設定
reportConstantRedefinition = "none"
reportDeprecated = "warning"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"
reportShadowedImports = "none"
reportUnnecessaryComparison = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnusedFunction = "none"
